# picosat

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-read-file-content.toml
src-tauri/src/: main.rs
src/components/: EpochConverter.test.tsx  EpochConverter.tsx  MarkdownViewer.tsx  MermaidViewer.tsx  ObjectDiffView.tsx  Sidebar.test.tsx  Sidebar.tsx
src/utils/: diffTree.ts
